ingress/traefik-20/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik-ui.minikube`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  - match: Host(`traefik-ui.minikube`) && PathPrefix(`/dashboard`)
    kind: Rule
    services:
    - name: traefik
      port: 8080 
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik-ui.minikube`)
    kind: Rule
    services:
    - name: traefik 
      port: 8080
  tls:
    secretName: traefik-ui-tls-cert
